--- a/client/style.css
+++ b/client/style.css
@@ -16,6 +16,10 @@ body {
   font-family: "Roboto", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+p{
+  margin:2rem;
+}
+
 header {
   width: 100%;
   height: 300px;
