--- a/client/style.css
+++ b/client/style.css
@@ -2,12 +2,9 @@
    #STYLES
    ========================================================================== */
 
-html {
-  box-sizing: border-box;
-}
 
 *, *::before, *::after {
-  box-sizing: inherit;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
@@ -49,10 +46,8 @@ button {
   text-decoration: none;
   white-space: nowrap;
   background-color: transparent;
-  border-radius: 4px;
-  border: 1px solid #bbb;
   cursor: pointer;
-  box-sizing: border-box;
+  border-radius: 5px;
 }
 
 button:hover {
@@ -61,5 +56,52 @@ button:hover {
 
 .trigger-push {
   background-color: #073525;
-  border: 1px solid #073525;
+}
+
+/* pour les posts */
+
+.container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  grid-gap: 2rem;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem auto;
+  padding: 1rem 0;
+}
+.card {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 15rem auto;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  margin: auto;
+  overflow: hidden;
+}
+.card-avatar {
+  width: 100%;
+  height: 10rem;
+  object-fit: cover;
+}
+.card-title {
+  color: #073525;;
+  font-weight: 700;
+  text-transform: capitalize;
+  font-size: 1.1rem;
+  margin-top: 1rem;
+}
+.card-link {
+  text-decoration: none;
+  background: #073525;
+  padding: 0.3rem 1rem;
+  margin: 10px;
+  color: #fff;
+  border-radius: 5px;
+}
+.intro {
+  color: #c2c5c5;
+  padding: 10px;
+}
+.active {
+  color: #073525;
 }
